@@ -1,8 +1,5 @@
 package com.travel.domain.accommodation.service;
 
-import static com.travel.global.util.DateValidationUtil.isCheckInValid;
-import static com.travel.global.util.DateValidationUtil.isCheckOutValid;
-
 import com.travel.domain.accommodation.dto.response.AccommodationResponse;
 import com.travel.domain.accommodation.entity.Accommodation;
 import com.travel.domain.accommodation.repository.AccommodationRepository;
@@ -18,54 +15,55 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class AccommodationService {
 
     private final ProductRepository productRepository;
+
     private final AccommodationRepository accommodationRepository;
+
     private final ProductInfoPerNightRepository productInfoPerNightRepository;
 
     @Transactional(readOnly = true)
-    public Page<AccommodationResponse> getAvailableAccommodations(String category,
-        LocalDate checkIn, LocalDate checkOut, int personNumber, Pageable pageable) {
+    public Page<AccommodationResponse> getAvailableAccommodations(
+        String category, LocalDate checkIn,
+        LocalDate checkOut, int personNumber,
+        Pageable pageable) {
         validateInputs(checkIn, checkOut, personNumber);
 
         List<Accommodation> accommodations;
         if (category == null) {
-            accommodations = accommodationRepository.findAll();
+            accommodations = accommodationRepository.findAllWithImagesAndOptions();
         } else {
             accommodations = accommodationRepository.findByCategoryWithImagesAndOptions(category);
         }
 
-        List<Accommodation> validAccommodationList = accommodations.stream()
-            .filter(accommodation ->
-                hasValidProducts(accommodation, checkIn, checkOut, personNumber))
-            .collect(Collectors.toList());
+        List<AccommodationResponse> validAccommodations = accommodations.stream()
+            .filter(
+                accommodation -> hasValidProducts(accommodation, checkIn, checkOut, personNumber))
+            .map(AccommodationResponse::createAccommodationResponse)
+            .toList();
 
-        if (validAccommodationList.isEmpty()) {
+        if (validAccommodations.isEmpty()) {
             throw new AccommodationException(ErrorType.NOT_FOUND);
         }
 
-        int start = Math.min((int) pageable.getOffset(), validAccommodationList.size());
-        int end = Math.min((start + pageable.getPageSize()), validAccommodationList.size());
-        List<AccommodationResponse> content = validAccommodationList.subList(start, end).stream()
-            .map(AccommodationResponse::createAccommodationResponse)
-            .collect(Collectors.toList());
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), validAccommodations.size());
 
-        return new PageImpl<>(content, pageable, validAccommodationList.size());
+        return new PageImpl<>(validAccommodations.subList(start, end),
+            pageable, validAccommodations.size());
     }
 
     private void validateInputs(LocalDate checkIn, LocalDate checkOut, int personNumber) {
-        if (!isCheckInValid(checkIn)) {
+        if (!DateValidationUtil.isCheckInValid(checkIn)) {
             throw new AccommodationException(ErrorType.INVALID_CHECK_IN);
         }
-        if (!isCheckOutValid(checkIn, checkOut)) {
+        if (!DateValidationUtil.isCheckOutValid(checkIn, checkOut)) {
             throw new AccommodationException(ErrorType.INVALID_CHECK_OUT);
         }
         if (personNumber < 1) {
@@ -75,8 +73,9 @@ public class AccommodationService {
 
     private boolean hasValidProducts(Accommodation accommodation, LocalDate checkIn,
         LocalDate checkOut, Integer personNumber) {
-        List<Product> productEntityList = productRepository.findAllByAccommodationId(
-            accommodation.getId());
+        List<Product> productEntityList = productRepository
+            .findAllByAccommodationIdWithFetchJoin(accommodation.getId());
+
         return productEntityList.stream()
             .filter(product
                 -> product.getStandardNumber() <= personNumber
